# JRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
install/res/model/HonkaiStarRail/lingsha/: lingsha.pmx  灯.pmx
install/res/shaders/: backface_outline.frag  backface_outline.vert  common_inputs.glsl  compile.bat  star_rail.frag  star_rail.vert  star_rail_inputs.glsl  star_rail_outline_inputs.glsl  test.vert
install/res/shaders/glsl/core/: lighting.glsl  macros.glsl
res/shaders/: backface_outline.vert  common_data.glsl  compile.bat  compile_shaders.cmake  precompile_shaders.txt  space_transform.glsl  star_rail.frag  star_rail.vert  star_rail_common_inputs.glsl  test.frag  test.vert
res/shaders/glsl/core/: lighting.glsl
src/: app.cpp  app.h  app_statistic.cpp  app_statistic.h  jrenderer.cpp  jrenderer.h  main.cpp  main_loop_context.h  shader.cpp  shader.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_pipeline_builder.cpp  vulkan_pipeline_builder.h  window.cpp  window.h
src/debug/: debug.h  debug_print.cpp  debug_print.h
src/helper/: statistics.cpp  statistics.h
src/imgui_helper/: VulkanBuffer.cpp  VulkanDevice.cpp  VulkanExampleBase.cpp  VulkanExampleBase.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  imgui_context.cpp  imgui_context.h  imgui_helper.cpp  imgui_helper.h  imgui_window_base.h  imwin_debug.cpp  imwin_debug.h
src/imgui_helper/imgui_window/: imgui_window_base.h  imgui_windows.cpp  imgui_windows.h  imwin_debug.cpp  imwin_debug.h
src/imgui_windows/: imwin_debug.cpp  imwin_debug.h
src/jrenderer/: CMakeLists.txt
src/jrenderer/include/: jmath.h  jrenderer.h
src/jrenderer/include/details/: imgui_context.h  main_loop_context.h  vulkan_buffer.h  vulkan_pipeline.h  vulkan_pipeline_builder.h  vulkan_vertex.h
src/jrenderer/include/jrenderer/: async_helper.hpp  buffer.h  command_buffer.h  command_pool.h  concrete_uniform_buffers.h  constant_buffer.h  descriptor.h  descriptor_transform.h  descriptor_update.hpp  frame.h  graphics.h  graphics_pipeline.h  image.h  input_manager.h  instance.h  light.h  logical_device.h  material.h  mesh.h  mesh_drawer.h  model.h  physical_device.h  pipeline.h  render_pass.h  render_set.h  resources.hpp  shader.h  specilization_constant.hpp  star_rail_char_render_set.h  surface.h  swap_chain.h  texture.h  tick_draw.h  uniform_buffer.h  uniform_buffer.hpp  window.h
src/jrenderer/include/jrenderer/asset/: convert.hpp  model_lingsha.h  obj_file.h  pmx_file.cpp  pmx_file.h  raii_stb_image.h  star_rail_material.h
src/jrenderer/include/jrenderer/camera/: camera_controller.h  render_viewport.h
src/jrenderer/include/jrenderer/drawer/: command_buffer_recordable.h  imgui_drawer.h  render_pass_drawer.h  scene_drawer.h
src/jrenderer/include/jrenderer/ticker/: scene_ticker.h
src/jrenderer/include/jrenderer/utils/: diff_trigger.hpp  unique_resource.hpp  vk_shared_utils.h  vk_utils.h
src/jrenderer/src/: buffer.cpp  camera_controller.cpp  command_buffer.cpp  command_pool.cpp  descriptor.cpp  descriptor_transform.cpp  frame.cpp  graphics.cpp  graphics_pipeline.cpp  image.cpp  imgui_context.cpp  imgui_drawer.cpp  input_manager.cpp  instance.cpp  jrenderer.cpp  logical_device.cpp  material.cpp  mesh.cpp  mesh_drawer.cpp  model_lingsha.cpp  obj_file.cpp  physical_device.cpp  pipeline.cpp  pmx.file.cpp  raii_stb_image.cpp  render_pass.cpp  render_set.cpp  scene_drawer.cpp  scene_ticker.cpp  shader.cpp  star_rail_char_render_set.cpp  star_rail_material.cpp  surface.cpp  swap_chain.cpp  texture.cpp  uniform_buffer.cpp  vk_shared_utils.cpp  vk_utils.cpp  vulkan_buffer.cpp  vulkan_pipeline.cpp  (+2 more)
src/statistics/: statistics.cpp  statistics.h
